adding search by activity beneficiary
